# Hireflow

./: .env.example  .gitignore  Dockerfile  PRODUCT_BRIEF.md  README.md  RUNBOOK.md  inference.py  make_release.py  openenv.yaml  pyproject.toml  requirements.txt  run_server.ps1  validate_env.py
app/: __init__.py  __main__.py  env.py  grader.py  models.py  pipeline.py  server.py  tasks.py
app/data/: interviews.json  jobs.json  resumes.json
app/static/: index.html
server/: app.py
